[package]
name = "jito-block-engine"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "3.1.12", features = ["derive", "env"] }
env_logger = "0.9.3"
jito-auth = { path = "../auth" }
jito-protos = { path = "../jito_protos" }
jito-searcher = { path = "../searcher" }
jito-validator = { path = "../validator" }
log = "0.4.17"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "sync", "time"] }
tonic = "0.5.2"
